--- a/index.html
+++ b/index.html
@@ -173,19 +173,17 @@
                             and customization. Also I am good at</p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
-                                    <li><span>php</span></li>
-                                    <li><span>html</span></li>
-                                    <li><span>css</span></li>
-                                    <li><span>php</span></li>
-                                    <li><span>javascript</span></li>
-                                    <li><span>wordpress</span></li>
+                                   
+                                    <li><span>HTML</span></li>
+                                    <li><span>CSS</span></li>
+                                    <li><span>PHP</span></li>
+                                    <li><span>Javascript</span></li>
+                                    <li><span>WordPress</span></li>
                                     <li><span>ASP.Net</span></li>
-                                    <li><span>React</span></li>
-                                    <li><span>Vue</span></li>
-                                    <li><span>python</span></li>
-                                    <li><span>jquery</span></li>
-                                    <li><span>Djano framework</span></li>
-                                    <li><span>Angular framwork</span></li>
+                                    <li><span>ReactJS</span></li>
+                                    <li><span>Python</span></li>
+                                    <li><span>Jquery</span></li>
+                                    <li><span>Django framework</span></li>
                                     <li><span>CodeIgniter framwork</span></li>
                                     <li><span>Laravel framework</span></li>
                                   
