--- a/index.html
+++ b/index.html
@@ -327,18 +327,18 @@
                                     <div class="col-sm-5">
                                         <div class="mh-featured-project-content">
                                             <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s"
-                                                data-wow-delay="0.4s">Web Site</h4>
+                                                data-wow-delay="0.4s">Web site</h4>
                                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                                                 COVID-19 Live
                                             </h2>
-                                            <span class="wow fadeInUp" data-wow-duration="0.8s"
-                                                data-wow-delay="0.6s">Live site</span>
+                                            <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                                Live site</span>
                                             <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                                 This site project give the daily update about COVID-19 Live.link
                                                 daily infected people,daily recovered people and daily death
-                                                information.
-                                            </p>
-                                            <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
+                                                information..</p>
+                                            <a href="https://awais97.github.io/Covid-19/"
+                                                class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
                                                 data-wow-delay="0.7s">View Details</a>
                                             <div class="mh-testimonial mh-project-testimonial wow fadeInUp"
                                                 data-wow-duration="0.8s" data-wow-delay="0.9s">
@@ -346,6 +346,11 @@
                                                     <q>Update daily about COVID-19.</q>
                                                     <cite>-Awais Hassan</cite>
                                                 </blockquote>
+                                                <blockquote>
+                                                    <q>Update daily about COVID-19.</q>
+                                                    <cite>-Awais Hassan</cite>
+                                                </blockquote>
+
 
                                             </div>
                                         </div>
@@ -365,18 +370,18 @@
                                         <div class="mh-featured-project-content">
                                             <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s"
                                                 data-wow-delay="0.4s">Web site</h4>
-                                            <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Wrap
+                                            <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+                                                Dream Home Artitechure
                                             </h2>
                                             <span class="wow fadeInUp" data-wow-duration="0.8s"
-                                                data-wow-delay="0.6s">Dream Home Artitechure </span>
+                                                data-wow-delay="0.6s">online service</span>
                                             <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                                 This is Floorplanner,interior room design website project in which
                                                 floorplan can create by 2d sketch and can be view in 3d and VR.
-                                                Also upload blueprint plans
-
-                                            </p>
-                                            <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
-                                                data-wow-delay="0.7s">View Details</a>
+                                                Also upload blueprint plans.</p>
+                                            <a href="https://github.com/AWAIS97/DHA.git"
+                                                class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
+                                                data-wow-delay="0.7s">Still in progress</a>
                                             <div class="mh-testimonial mh-project-testimonial wow fadeInUp"
                                                 data-wow-duration="0.8s" data-wow-delay="0.9s">
                                                 <blockquote>
@@ -387,7 +392,6 @@
                                                     <q>Still in progress.</q>
                                                     <cite>- Awais Hassan</cite>
                                                 </blockquote>
-
                                             </div>
                                         </div>
                                     </div>
@@ -399,7 +403,6 @@
             </div>
         </div>
     </section>
-
     <!--
         ===================
            SKILLS
@@ -679,7 +682,7 @@
                                         <i class="fa fa-search"></i>
                                         <h5 class="title">COVID-19 live</h5>
                                         <span class="sub-title">website</span>
-                                        <a href="assets/images/portfolio/g2.png" data-fancybox data-src="#mh"></a>
+                                        <a href="assets/images/portfolio/g2.png" data-fancybox data-src="#mh-2"></a>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -690,7 +693,7 @@
                                         <i class="fa fa-search"></i>
                                         <h5 class="title">Dream Home Artitecture</h5>
                                         <span class="sub-title">Website</span>
-                                        <a href="assets/images/portfolio/g3.png" data-fancybox data-src="#mh"></a>
+                                        <a href="assets/images/portfolio/g3.png" data-fancybox data-src="#mh-3"></a>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -704,44 +707,124 @@
             <div class="container">
                 <div class="row mh-portfolio-modal-inner">
                     <div class="col-sm-5">
-                        <h2>Wrap - A campanion plugin</h2>
-                        <p>Wrap is a clean and elegant Multipurpose Landing Page Template.
-                            It will fit perfectly for Startup, Web App or any type of Web Services.
-                            It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme.
-                            All variations are organized separately so you can use / customize the template very easily.
+                        <h2>Shopping Portal- e-Commerace</h2>
+                        <p> This is E-commerace business-to-consumer Shopping Portal Website
+                            project.E-commerce website
+                            (electronic commerce or EC) is the buying and selling of goods and
+                            services,
+                            or the transmitting of funds or data, over an electronic network,
+                            primarily the internet. These business transactions occur either as
+                            business-to-consumer
                         </p>
 
-                        <p>It is a clean and elegant Multipurpose Landing Page Template.
-                            It will fit perfectly for Startup, Web App or any type of Web Services.
-                            It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme.
-                            All variations are organized separately so you can use / customize the template very easily.
+                        <p>
                         </p>
                         <div class="mh-about-tag">
                             <ul>
                                 <li><span>php</span></li>
                                 <li><span>html</span></li>
                                 <li><span>css</span></li>
-                                <li><span>php</span></li>
-                                <li><span>wordpress</span></li>
-                                <li><span>React</span></li>
                                 <li><span>Javascript</span></li>
+                                <li><span>jquery</span></li>
                             </ul>
                         </div>
                         <a href="#" class="btn btn-fill">Live Demo</a>
                     </div>
                     <div class="col-sm-7">
                         <div class="mh-portfolio-modal-img">
-                            <img src="assets/images/pr-0.jif" alt="" class="img-fluid">
-                            <p>All variations are organized separately so you can use / customize the template very
-                                easily.</p>
-                            <img src="assets/images/pr-1.jif" alt="" class="img-fluid">
-                            <p>All variations are organized separately so you can use / customize the template very
-                                easily.</p>
+                            <img src="assets/images/p-1.png" alt="" class="img-fluid">
+                            <p>Easy to use</p>
+                            <img src="assets/images/pp-1.png" alt="" class="img-fluid">
+                            <p>Easy to use</p>
+                            <img src="assets/images/pp-2.png" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="mh-portfolio-modal" id="mh-2">
+            <div class="container">
+                <div class="row mh-portfolio-modal-inner">
+                    <div class="col-sm-5">
+                        <h2>COVID-19</h2>
+                        <p> This site project give the daily update about COVID-19 Live.link
+                            daily infected people,daily recovered people and daily death
+                            information.
+                        </p>
+
+                        <p>
+                        </p>
+                        <div class="mh-about-tag">
+                            <ul>
+                                <li><span>ReactJS</span></li>
+                                <li><span>html</span></li>
+                                <li><span>css</span></li>
+                                <li><span>Javascript</span></li>
+                                <li><span>CharJS</span></li>
+                                <li><span>React Hooks</span></li>
+                                <li><span>API</span></li>
+                            </ul>
+                        </div>
+                        <a href="https://awais97.github.io/Covid-19/" class="btn btn-fill">Live Demo</a>
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="mh-portfolio-modal-img">
+                            <img src="assets/images/p-3.png" alt="" class="img-fluid">
+                            <p>Get live info</p>
+                            <img src="assets/images/p-4.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="mh-portfolio-modal" id="mh-3">
+            <div class="container">
+                <div class="row mh-portfolio-modal-inner">
+                    <div class="col-sm-5">
+                        <h2>Dream Home Artitecture - Online service </h2>
+                        <p> This is Floorplanner,interior room design website project in which
+                            floorplan can create by 2d sketch and can be view in 3d and VR.
+                            Also upload blueprint plans.
+                        </p>
+
+                        <p>
+                        </p>
+                        <div class="mh-about-tag">
+                            <ul>
+                                <li><span>php</span></li>
+                                <li><span>html</span></li>
+                                <li><span>css</span></li>
+                                <li><span>Javascript</span></li>
+                                <li><span>jquery</span></li>
+                                <li><span>ThreeJS</span></li>
+                                <li><span>Blueprint3d.js</span></li>
+
+                            </ul>
+                        </div>
+                        <a href="#" class="btn btn-fill">Live Demo</a>
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="mh-portfolio-modal-img">
+                            <p>2d view</p>
+                            <img src="assets/images/2d.png" alt="" class="img-fluid">
+                            <p>3d view</p>
+                            <img src="assets/images/p-2.png" alt="" class="img-fluid">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
     </section>
 
     <!--
