--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                             <ul>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i
-                                        class="fa fa-envelope"></i><a href="mailto:">awaishassan1997@email.com</a></li>
+                                        class="fa fa-envelope"></i><a href="mailto:">awaishassan1997@gmail.com</a></li>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><i
                                         class="fa fa-phone"></i><a href="callto:">+92 314 5500615</a></li>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i
