--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
 <html lang="en">
-
-<!-- Mirrored from cvresumetemplate.com/maha-personal-cv-resume-html-template/home-two.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 Feb 2020 17:17:40 GMT -->
-
 <head>
     <title>AWAIS - Personal CV/Resume Template </title>
     <!-- Required meta tags -->
@@ -124,8 +121,7 @@
                             </div>
 
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Awais Hassan</h2>
-                            <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Web Developer and
-                                Designer</h4>
+                            <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Front-end developer</h4>
 
                             <ul>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i
@@ -181,15 +177,15 @@
                         <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                             <ul>
 
-                                <li><span>HTML</span></li>
-                                <li><span>CSS</span></li>
+                                <li><span>HTML5</span></li>
+                                <li><span>CSS3</span></li>
                                 <li><span>PHP</span></li>
                                 <li><span>Javascript</span></li>
                                 <li><span>WordPress</span></li>
                                 <li><span>ReactJS</span></li>
                                 <li><span>NodeJS/ExpressJS</span></li>
 
-                                <li><span>Python</span></li>
+ 
                                 
 
                             </ul>
