--- a/index.html
+++ b/index.html
@@ -189,9 +189,7 @@
                                 
 
                             </ul>
-                        </div>
-                        <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
-                            data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                        </div
                     </div>
                 </div>
             </div>
@@ -353,46 +351,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Items -->
-                            <div class="col-sm-12 mh-featured-item">
-                                <div class="row">
-                                    <div class="col-sm-7">
-                                        <div class="mh-featured-project-img shadow-2 wow fadeInUp"
-                                            data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                            <img src="assets/images/p-2.png" alt="" class="img-fluid">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-5">
-                                        <div class="mh-featured-project-content">
-                                            <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s"
-                                                data-wow-delay="0.4s">Web site</h4>
-                                            <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                                Dream Home Artitechure
-                                            </h2>
-                                            <span class="wow fadeInUp" data-wow-duration="0.8s"
-                                                data-wow-delay="0.6s">online service</span>
-                                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                                This is Floorplanner,interior room design website project in which
-                                                floorplan can create by 2d sketch and can be view in 3d and VR.
-                                                Also upload blueprint plans.</p>
-                                            <a href="https://github.com/AWAIS97/DHA.git"
-                                                class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
-                                                data-wow-delay="0.7s">Still in progress</a>
-                                            <!-- <div class="mh-testimonial mh-project-testimonial wow fadeInUp"
-                                                data-wow-duration="0.8s" data-wow-delay="0.9s">
-                                                <blockquote>
-                                                    <q>Fast and easy to use</q>
-                                                    <cite>- Awais Hassan</cite>
-                                                </blockquote>
-                                                <blockquote>
-                                                    <q>Still in progress.</q>
-                                                    <cite>- Awais Hassan</cite>
-                                                </blockquote>
-                                            </div> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div> <!-- End: .row -->
