--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
                                         <div class="parcial">
                                             <div class="info">
                                                 <div class="nome">ReactJS</div>
-                                                <div class="percentagem-num">50%</div>
+                                                <div class="percentagem-num">75%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 50%;"></div>
+                                                <div class="percentagem" style="width: 75%;"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -570,7 +570,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div> 
             </div>
         </div>
         </div>
